--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/Consumer.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +14,9 @@
     "dotenv": "^16.0.3",
     "nodemailer": "^6.9.0",
     "pg": "^8.8.0"
+  },
+  "type": "module",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
